Change project java version from 11 to 8